Added in standard page amends

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -49,6 +49,7 @@ $pd-border-radius-sm: 20px;
 $pd-block-padding-ex-sm: 30px;
 $pd-block-padding-sm: 40px;
 $pd-block-padding-lg: 60px;
+$pd-grid-gap-ex-lg: 60px;
 $pd-grid-gap-lg: 40px;
 $pd-grid-gap-sm: 20px;
 
