--- a/bootstrap_theme/vivato/factory_blog_post.scss
+++ b/bootstrap_theme/vivato/factory_blog_post.scss
@@ -758,7 +758,7 @@
     }
 
     .pd-blog-post-3-top {
-        padding-bottom: 200px;
+        padding-bottom: 260px;
 
         header {
             p {
@@ -836,15 +836,15 @@
         }
 
         background: rgba(255,255,255, 0.85);
-        margin-top: -200px;
+        margin-top: -260px;
         border-radius: 0 0 $pd-border-radius-sm $pd-border-radius-sm;
     }
 
-    .pd-blog-post-3-tag-icon-outer {
-        svg {
-            fill: $secondary;
-        }
-    }
+    // .pd-blog-post-3-tag-icon-outer {
+    //     svg {
+    //         fill: $secondary;
+    //     }
+    // }
 
     .pd-blog-post-3-tag-group {
         a {
