Added in vertical arrow for mobile

--- a/bootstrap_theme/vivato/utils.scss
+++ b/bootstrap_theme/vivato/utils.scss
@@ -1022,10 +1022,69 @@
         z-index: 2;
     }
 
-    @media screen and (max-width: 767px) {
+    @media screen and (max-width: 991px) {
         &::after,
         &::before {
             display: none;
         }
     }
+}
+
+.pd-arrow-vertical {
+    position: relative;
+    min-height: 100px;
+    height: 100%;
+    z-index: 0;
+
+    &::after {
+        content: '';
+        position: absolute;
+        left: 50%;
+        top: 0;
+        width: 2px;
+        height: 100%;
+        background-color: $secondary;
+        transform: translateX(-50%);
+        z-index: 1;
+    }
+
+    &::before {
+        content: '';
+        position: absolute;
+        left: 50%;
+        bottom: 0;
+        width: 0;
+        height: 0;
+        border-top: 10px solid $secondary;
+        border-left: 5px solid transparent;
+        border-right: 5px solid transparent;
+        transform: translateX(-50%);
+        z-index: 2;
+    }
+
+    @media screen and (max-width: 991px) {
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        height: 100%;
+        min-height: 100%;
+        z-index: 1;
+
+        &::after {
+            z-index: 1;
+        }
+
+        &::before {
+            z-index: 2;
+        }
+    }
+
+    @media (min-width: 992px) {
+        display: none;
+    }
+}
+
+.pd-z-index-1 {
+    z-index: 1;
 }
