--- a/bootstrap_theme/vivato/utils.scss
+++ b/bootstrap_theme/vivato/utils.scss
@@ -1052,7 +1052,7 @@
         content: '';
         position: absolute;
         left: 50%;
-        bottom: 0;
+        bottom: -2px;
         width: 0;
         height: 0;
         border-top: 10px solid $secondary;
