--- a/bootstrap_theme/vivato/factory_mega_menu_nav.scss
+++ b/bootstrap_theme/vivato/factory_mega_menu_nav.scss
@@ -510,12 +510,30 @@ $pd-mega-menu-border-color: $secondary;
         width: 100%;
         flex: 0 0 auto;
 
-        strong {
-            // text-transform: uppercase;
-            font-weight: 700;
-            color: $primary;
-            font-size: 0.75rem;
+        a {
+            strong {
+                // text-transform: uppercase;
+                font-weight: 700;
+                color: $primary;
+                transition: color 0.2s ease;
+                font-size: 0.75rem;
+            }
+
+            svg {
+                fill: $primary;
+                width: 20px;
+                height: 20px;
+                margin-left: 8px;
+            }
+
+            &:hover {
+                strong {
+                    color: #000000;
+                }
+            }
+
         }
+
     }
 }
 
