--- a/bootstrap_theme/vivato/utils.scss
+++ b/bootstrap_theme/vivato/utils.scss
@@ -714,8 +714,14 @@
         min-height: 520px;
     }
 
-    @media (min-width: 1200px) {
+    @media (min-width: 1200px) and (max-width: 1399px) {
         width: 480px;
+        height: 100%;
+        min-height: 520px;
+    }
+
+    @media (min-width: 1400px) {
+        width: 560px;
         height: 100%;
         min-height: 520px;
     }
