Added in more focus visible and hover styles

--- a/bootstrap_theme/vivato/factory_grid.scss
+++ b/bootstrap_theme/vivato/factory_grid.scss
@@ -1930,6 +1930,11 @@
                 fill: $info;
             }
         }
+
+        &:focus-visible {
+            outline: $pd-focus-outline-dark;
+            outline-offset: $pd-focus-outline-offset-sm;
+        }
     }
 }
 
