--- a/bootstrap_theme/vivato/factory_cards.scss
+++ b/bootstrap_theme/vivato/factory_cards.scss
@@ -2462,6 +2462,12 @@
                         transform: scale(1.1);
                     }
                 }
+
+                &:focus-visible {
+                    outline: $pd-focus-outline-dark;
+                    outline-offset: $pd-focus-outline-offset-sm;
+                    border-radius: 50em;
+                }
             }
         }
 
